src/app/shared/components/pause-menu/pause-menu.component.css
.c-pause-menu {
    width: 474px;
    height: 485px;
    margin-top: 205px;
    background-color: var(--primary-purple2);
    border: 3px solid black;
    border-radius: 20px;
    box-shadow: 0px 10px var(--primary-black);
}

.c-pause-menu__background {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 6;
    width: 100%;
    min-height: 100vh;
    background-color: rgb(0,0,0,0.5);
    display: flex;
    justify-content: center;
}

.c-pause-menu__heading {
    color: var(--primary-white);
    font-family: 'Space Grotesk';
    font-weight: bold;
    font-size: 56px;
    line-height: 71px;
}

.l-pause-menu {
    display: flex;
    flex-direction: column;
    align-items: center;
}


.l-pause-menu__content {
    margin-top: 60px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 44px;
}


.l-pause-menu__buttons {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;   
}

@media (max-width: 550px) {
    
    .c-pause-menu {
        width: 335px;
        height: 437px;
        margin-top: 188px;
        border-radius: 40px;
    }


    .l-pause-menu__content {
        margin-top: 30px;
        gap: 30px;
    }
}

